--- a/code/dev/parts/users/new.html
+++ b/code/dev/parts/users/new.html
@@ -20,35 +20,47 @@
         </div>
       </div>
       <div class="panel-body">
-        <form name="createForm" class="form-horizontal">
-          <div class="form-group">
-            <label for="email" popover-append-to-body="{{true}}" class="col-sm-2 control-label" popover-trigger="mouseenter" uib-popover="New user's email address - the address should be unique across the system">Email</label>
+        <form name="createForm" class="form-horizontal" novalidate>
+          <div class="form-group" ng-class="{'has-error': createForm.email.$invalid && createForm.email.$dirty}">
+            <label for="email" popover-append-to-body="{{true}}" class="col-sm-2 control-label" popover-trigger="mouseenter" uib-popover="New user's email address - the address should be unique across the system">Email *</label>
             <div class="col-sm-10">
-              <input type="email" autofocus class="form-control" id="email" placeholder="Email" ng-model="model.email" ng-disabled="_loading">
+              <input type="email" autofocus class="form-control" id="email" name="email" placeholder="Email" ng-model="model.email" ng-disabled="_loading" required>
+              <div class="error-messages" ng-messages="createForm.email.$error" role="alert" ng-messages-multiple>
+                <div ng-messages-include="parts/shared/error-messages.html"></div>
+              </div>
             </div>
           </div>
-          <div class="form-group">
-            <label for="firstname" class="col-sm-2 control-label" popover-trigger="mouseenter" uib-popover="First name">First Name</label>
+          <div class="form-group" ng-class="{'has-error': createForm.firstName.$invalid && createForm.firstName.$dirty}">
+            <label for="firstname" class="col-sm-2 control-label" popover-trigger="mouseenter" uib-popover="First name">First Name *</label>
             <div class="col-sm-10">
-              <input type="text" class="form-control" id="firstname" placeholder="First Name" ng-model="model.firstname" ng-disabled="_loading">
+              <input type="text" class="form-control" id="firstname" name="firstName" placeholder="First Name" ng-model="model.firstname" ng-disabled="_loading" required>
+              <div class="error-messages" ng-messages="createForm.firstName.$error" role="alert" ng-messages-multiple>
+                <div ng-messages-include="parts/shared/error-messages.html"></div>
+              </div>
             </div>
           </div>
-          <div class="form-group">
-            <label for="lastName" class="col-sm-2 control-label" popover-trigger="mouseenter" uib-popover="Last name">Last Name</label>
+          <div class="form-group" ng-class="{'has-error': createForm.lastName.$invalid && createForm.lastName.$dirty}">
+            <label for="lastName" class="col-sm-2 control-label" popover-trigger="mouseenter" uib-popover="Last name">Last Name *</label>
             <div class="col-sm-10">
-              <input type="text" class="form-control" id="lastName" placeholder="Last Name" ng-model="model.lastname" ng-disabled="_loading">
+              <input type="text" class="form-control" id="lastName" name="lastName" placeholder="Last Name" ng-model="model.lastname" ng-disabled="_loading" required>
+              <div class="error-messages" ng-messages="createForm.lastName.$error" role="alert" ng-messages-multiple>
+                <div ng-messages-include="parts/shared/error-messages.html"></div>
+              </div>
             </div>
           </div>
-          <div class="form-group">
-            <label for="role" popover-append-to-body="{{true}}" class="col-sm-2 control-label" popover-trigger="mouseenter" uib-popover="Select here the user's role in management of the account">Role</label>
+          <div class="form-group" ng-class="{'has-error': createForm.role.$invalid && createForm.role.$dirty}">
+            <label for="role" popover-append-to-body="{{true}}" class="col-sm-2 control-label" popover-trigger="mouseenter" uib-popover="Select here the user's role in management of the account">Role *</label>
             <div class="col-sm-10">
-              <select class="form-control" id="role" ng-model="model.role" ng-disabled="_loading" ng-options="role for role in roles">
+              <select class="form-control" id="role" name="role" ng-model="model.role" ng-disabled="_loading" ng-options="role for role in roles" required>
                 <option value="">--- Select Role ---</option>
               </select>
+              <div class="error-messages" ng-messages="createForm.role.$error" role="alert" ng-messages-multiple>
+                <div ng-messages-include="parts/shared/error-messages.html"></div>
+              </div>
             </div>
           </div>
-          <div class="form-group" ng-if="auth.isReseller() || auth.isRevadmin()">
-            <label for="company" popover-append-to-body="{{true}}" class="col-sm-2 control-label" popover-trigger="mouseenter" uib-popover="Select here account the user should be associated with">Accounts</label>
+          <div class="form-group" ng-class="{'has-error': createForm.app_name.$invalid && createForm.app_name.$dirty}" ng-if="auth.isReseller() || auth.isRevadmin()">
+            <label for="company" popover-append-to-body="{{true}}" class="col-sm-2 control-label" popover-trigger="mouseenter" uib-popover="Select here account the user should be associated with">Accounts *</label>
             <div class="col-sm-10">
               <ui-select ng-show="!_loading && companies.length>0" multiple theme="bootstrap" class="form-control" ng-disabled="_loading" ng-model="model.companyId" id="company" on-select="onAccountSelect($model)">
                 <ui-select-match placeholder="Add account...">{{$item.companyName}}</ui-select-match>
@@ -58,15 +70,18 @@
               </ui-select>
             </div>
           </div>
-          <div class="form-group">
+          <div class="form-group" ng-class="{'has-error': createForm.domain.$invalid && createForm.domain.$dirty}">
             <label for="domain" popover-append-to-body="{{true}}" class="col-sm-2 control-label" popover-trigger="mouseenter" uib-popover="Select domain names the user should be allowed to manage">Domains</label>
             <div class="col-sm-10">
-              <ui-select ng-show="!_loading" multiple theme="bootstrap" class="form-control" ng-disabled="_loading" ng-model="model.domain" id="domain">
+              <ui-select validate-domains-list ng-show="!_loading" multiple theme="bootstrap" class="form-control" ng-disabled="_loading" ng-model="model.domain" id="domain" name="domain">
                 <ui-select-match placeholder="{{getDomainPlaceholder()}}">{{$item.domain_name}}</ui-select-match>
                 <ui-select-choices repeat="item.domain_name as item  in getAccountDomainNameList()| filter: {domain_name: $select.search}">
                   <div ng-bind-html="item.domain_name|highlight: $select.search"></div>
                 </ui-select-choices>
               </ui-select>
+              <div class="error-messages" ng-messages="createForm.domain.$error" role="alert" ng-messages-multiple>
+                <div ng-messages-include="parts/shared/error-messages.html"></div>
+              </div>
             </div>
           </div>
           <hr>
@@ -91,25 +106,33 @@
             </div>
           </div>
           <hr>
-          <div class="form-group">
-            <label for="password" class="col-sm-2 control-label" popover-trigger="mouseenter">Password</label>
+          <div class="form-group" ng-class="{'has-error': createForm.password.$invalid && createForm.password.$dirty}">
+            <label for="password" class="col-sm-2 control-label" popover-trigger="mouseenter">Password *</label>
             <div class="col-sm-10">
-              <input type="password" class="form-control" id="password" ng-model="model.password" ng-disabled="_loading" required="">
+              <input type="password" class="form-control" id="password" name="password" ng-model="model.password" ng-disabled="_loading" required>
+              <div class="error-messages" ng-messages="createForm.password.$error" role="alert" ng-messages-multiple>
+                <div ng-messages-include="parts/shared/error-messages.html"></div>
+              </div>
             </div>
           </div>
-          <div class="form-group">
-            <label for="passwordConfirm" class="col-sm-2 control-label" popover-trigger="mouseenter">Confirm Password</label>
+          <div class="form-group" ng-class="{'has-error': createForm.passwordConfirm.$invalid && createForm.passwordConfirm.$dirty}">
+            <label for="passwordConfirm" class="col-sm-2 control-label" popover-trigger="mouseenter">Confirm Password *</label>
             <div class="col-sm-10">
-              <input type="password" class="form-control" id="passwordConfirm" ng-model="model.passwordConfirm" ng-disabled="_loading">
+              <input type="password" class="form-control" id="passwordConfirm" name="passwordConfirm" ng-model="model.passwordConfirm" ng-disabled="_loading" required>
+              <div class="error-messages" ng-messages="createForm.passwordConfirm.$error" role="alert" ng-messages-multiple>
+                <div ng-messages-include="parts/shared/error-messages.html"></div>
+              </div>
             </div>
           </div>
           <hr>
-          <div class="form-group" ng-class="{ 'has-error': createForm.comment.$invalid &&
-                                      createForm.comment.$dirty }">
+          <div class="form-group" ng-class="{ 'has-error': createForm.comment.$invalid && createForm.comment.$dirty }">
             <label for="comment" class="col-sm-2 control-label" popover-trigger="mouseenter" uib-popover="Comment">Comment</label>
             <div class="col-sm-10">
-              <textarea id="comment" placeholder="Comment (300 characters max)" class="form-control" name="comment" ng-model="model.comment" ng-disabled="_loading">
+              <textarea id="comment" placeholder="Comment (300 characters max)" ng-maxlength="300" class="form-control" name="comment" ng-model="model.comment" ng-disabled="_loading">
               </textarea>
+              <div class="error-messages" ng-messages="createForm.comment.$error" role="alert" ng-messages-multiple>
+                <div ng-messages-include="parts/shared/error-messages.html"></div>
+              </div>
             </div>
           </div>
           <hr>
