--- a/code/dev/parts/apps/edit.html
+++ b/code/dev/parts/apps/edit.html
@@ -219,7 +219,7 @@
                   </div>
                 </div>
                 <div class="form-group col-sm-4">
-                  <a ui-sref="index.webApp.domains" class="btn btn-xs btn-primary pull-left" uib-tooltip="Manage Domains" ng-disabled="_loading"><i class="fa fa-list"></i> Manage Domains</a>
+                  <a ui-sref="index.webApp.domains" class="btn btn-sm btn-primary pull-left" uib-tooltip="Manage Domains" ng-disabled="_loading"><i class="fa fa-list"></i> Manage Domains</a>
                 </div>
               </div>
             </div>
