--- a/code/dev/parts/apps/new.html
+++ b/code/dev/parts/apps/new.html
@@ -85,9 +85,13 @@
               <a ui-sref="^" class="btn btn-default">
                 <i class="glyphicon glyphicon-remove"></i>&nbsp; Cancel
               </a>
-              <button class="btn btn-success" ng-disabled="_loading || createForm.$invalid" ng-click="createApp(model)">
+              <button class="btn btn-success" id="create_app" ng-disabled="_loading || createForm.$invalid" ng-click="createApp(model,false)">
                 <i class="glyphicon glyphicon-refresh spin" ng-if="_loading"></i>
-                <i class="glyphicon glyphicon-ok" ng-if="!_loading"></i>&nbsp; Register
+                <i class="glyphicon glyphicon-ok" ng-if="!_loading"></i>&nbsp; Create App
+              </button>
+               <button class="btn btn-success" id="create_app_and_more" ng-disabled="_loading || createForm.$invalid" ng-click="createApp(model,true)">
+                <i class="glyphicon glyphicon-refresh spin" ng-if="_loading"></i>
+                <i class="glyphicon glyphicon-ok" ng-if="!_loading"></i>&nbsp; Create And Add More
               </button>
             </div>
           </div>
