--- a/code/dev/parts/domains/new.html
+++ b/code/dev/parts/domains/new.html
@@ -6,7 +6,7 @@
   </div>
 </div>
 
-<div class="row">
+<div class="row" ng-init="initNew()">
   <div class="col-md-12">
     <div class="panel panel-default">
       <div class="panel-heading">
@@ -26,7 +26,7 @@
 
       </div>
       <div class="panel-body">
-        <form class="form-horizontal" ng-submit="createDomain(model)" name="createForm">
+        <form class="form-horizontal" name="createForm">
           <div class="form-group">
             <label for="domain_name"
                    popover-append-to-body="{{true}}"
@@ -143,11 +143,17 @@
                 <i class="glyphicon glyphicon-remove"></i>&nbsp;
                 Cancel
               </a>
-              <button class="btn btn-success"
-                      ng-disabled="disableSubmit(model)">
+              <button class="btn btn-success" id="create_domain"
+                      ng-disabled="disableSubmit(model)" ng-click="createDomain(model, false)">
                 <i class="glyphicon glyphicon-refresh spin" ng-if="_loading"></i>
                 <i class="glyphicon glyphicon-ok" ng-if="!_loading"></i>&nbsp;
                 Create Domain
+              </button>
+              <button class="btn btn-success" id="create_domain_and_add_more"
+                      ng-disabled="disableSubmit(model)" ng-click="createDomain(model, true)">
+                <i class="glyphicon glyphicon-refresh spin" ng-if="_loading"></i>
+                <i class="glyphicon glyphicon-ok" ng-if="!_loading"></i>&nbsp;
+                Create And Add More
               </button>
             </div>
           </div>
