--- a/code/dev/parts/layout.html
+++ b/code/dev/parts/layout.html
@@ -1,12 +1,12 @@
 <paper-drawer-panel responsive-width="980px" drawer-width="210px">
-    <section drawer  ng-intro-options="IntroOptions"
+    <section drawer ng-intro-options="IntroOptions"
          ng-intro-method="CallGlobalIntro"
          ng-intro-oncomplete="onIntroCompletedEvent"
          ng-intro-onexit="ExitEvent"
          ng-intro-onchange="ChangeEvent"
          ng-intro-onbeforechange="BeforeChangeEvent"
          ng-intro-onafterchange="AfterChangeEvent"
-         ng-intro-autostart="isShowMainIntro==false || isShowMainIntro =='false'">
+         ng-intro-autostart="(isShowMainIntro==false || isShowMainIntro =='false')&& userService.isAuthed()">
         <a href="https://www.revapm.com/" id="logo" target="_blank">
             <img src="images/logo_color.png" alt="Logo" />
         </a>
