--- a/code/dev/index.html
+++ b/code/dev/index.html
@@ -160,6 +160,7 @@ ga('create',  window.gaAccount, 'auto');
 <script type="text/javascript" src="js/portal/shared/filter-generator/filter-generator.directive.js"></script>
 <script type="text/javascript" src="js/portal/shared/filter-generator/filter-generator.service.js"></script>
 <script type="text/javascript" src="js/portal/shared/search/search.directive.js"></script>
+<script type="text/javascript" src="js/portal/shared/validators/validate-cache-bypass-locations.directive.js"></script>
 <script type="text/javascript" src="js/portal/shared/validators/validate-compare-to.directive.js"></script>
 <script type="text/javascript" src="js/portal/shared/validators/validate-cookies-options.directive.js"></script>
 <script type="text/javascript" src="js/portal/shared/validators/validate-domains-list.directive.js"></script>
