--- a/code/dev/parts/shared/error-messages.html
+++ b/code/dev/parts/shared/error-messages.html
@@ -5,9 +5,11 @@
 <div ng-message="maxlength" class="alert-text alert-text--maxlength">The specified value contains too many characters</div>
 <div ng-message="min" class="alert-text alert-text--max">The specified value is too low</div>
 <div ng-message="max" class="alert-text alert-text--max">The specified value is too high</div>
+<div ng-message="compareTo">Must match the previous entry</div>
 <!-- Specefic Apps validation messages -->
 <!-- message for validate-domains-list -->
 <div ng-message="domains-list" class="alert-text alert-text--domains-list">Incorrect domain name format</div>
 <!-- message for validate-cookies-options -->
 <div ng-message="cookies-options" class="alert-text alert-text--cookies-options">Incorrect cookies name format</div>
-<div ng-message="compareTo">Must match the previous entry</div>
+<!-- message for validate-сache-bypass-locations -->
+<div ng-message="сache-bypass-locations" class="alert-text alert-text--cookies-options">Incorrect сache bypass location name format</div>
