--- a/code/dev/parts/ssl_certs/new.html
+++ b/code/dev/parts/ssl_certs/new.html
@@ -20,7 +20,7 @@
         </div>
       </div>
       <div class="panel-body">
-        <form class="form-horizontal" ng-submit="createSSL_cert(model)" name="createForm">
+        <form class="form-horizontal" name="createForm">
           <div class="form-group" ng-class="{ 'has-error': createForm.certName.$invalid && createForm.certName.$dirty }">
             <label for="cert_name" popover-append-to-body="{{true}}" class="col-sm-2 control-label" popover-trigger="mouseenter" uib-popover="Enter here a certificate name (150 characters max)">Certificate Name *</label>
             <div class="col-sm-10">
@@ -110,9 +110,13 @@
               <a ui-sref="^" class="btn btn-default">
                 <i class="glyphicon glyphicon-remove"></i>&nbsp; Cancel
               </a>
-              <button class="btn btn-success" ng-disabled="disableSubmit(model)">
+              <button class="btn btn-success" id="create_ssr_cert" ng-disabled="disableSubmit(model)" ng-click="createSSL_cert(model,false)">
                 <i class="glyphicon glyphicon-refresh spin" ng-if="_loading"></i>
                 <i class="glyphicon glyphicon-ok" ng-if="!_loading"></i>&nbsp; Create SSL Certificate
+              </button>
+              <button class="btn btn-success" id="create_ssr_cert_and_add_more" ng-disabled="disableSubmit(model)" ng-click="createSSL_cert(model,true)">
+                <i class="glyphicon glyphicon-refresh spin" ng-if="_loading"></i>
+                <i class="glyphicon glyphicon-ok" ng-if="!_loading"></i>&nbsp; Create And Add More
               </button>
             </div>
           </div>
