--- a/code/dev/parts/signup/form-short-signup.tpl.html
+++ b/code/dev/parts/signup/form-short-signup.tpl.html
@@ -1,5 +1,5 @@
-<div class="panel panel-default">
-  <div class="panel-heading" ng-if="$ctrl.isRegistryFinish">
+<div class="panel panel-default" ng-if="$ctrl.isRegistryFinish">
+  <div class="panel-heading">
     <h4>Please finish your registration</h4>
   </div>
   <div class="panel-body" ng-if="$ctrl.isRegistryFinish">
@@ -15,66 +15,54 @@
       </div>
     </div>
   </div>
-  <div class="panel-heading" ng-if="!$ctrl.isRegistryFinish">
+</div>
+
+<div class="signup-form">
+
+  <div class="form-body" ng-if="!$ctrl.isRegistryFinish">
     <div class="row">
-      <div class="col-md-12">
-        <h4 class="text-center">Please fill in your contact info (all fields are required):</h4>
-      </div>
-    </div>
-  </div>
-  <div class="panel-body" ng-if="!$ctrl.isRegistryFinish">
-    <form class="col-sm-offset-2 col-sm-8 form-horizontal form-contact-info" name="newUser" novalidate>
+    <form class="col-sm-offset-3 col-xs-offset-1 col-xs-10 col-md-offset-4 col-sm-6 col-md-4 form-horizontal form-contact-info" name="newUser" novalidate>
       <div class="form-group " ng-class="{ 'has-error': newUser.email.$invalid && newUser.email.$dirty }">
-        <label for="email" popover-append-to-body="{{true}}" class="col-sm-2 control-label" popover-trigger="mouseenter" uib-popover="New user's email address - the address should be unique across the system">
-          Email *</label>
-        <div class="col-sm-10">
-          <input type="email" autofocus class="form-control" id="email" name="email" placeholder="Email" ng-model="$ctrl.model.email" ng-maxlength="64" required ng-disabled="_loading">
+          <label for="email" popover-append-to-body="{{true}}" class="control-label" popover-trigger="mouseenter" uib-popover="New user's email address - the address should be unique across the system">
+                Email *</label>
+          <input type="email" class="form-control" autofocus id="email" name="email" placeholder="Email" ng-model="$ctrl.model.email" ng-maxlength="64" required ng-disabled="_loading">
           <div class="error-messages" ng-messages="newUser.email.$error" role="alert" ng-messages-multiple>
             <div ng-messages-include="parts/shared/error-messages.html"></div>
           </div>
-        </div>
       </div>
       <div class="form-group" ng-class="{ 'has-error': newUser.firstName.$invalid && newUser.firstName.$dirty }">
-        <label for="firstName" class="col-sm-2 control-label" popover-trigger="mouseenter" uib-popover="First name">First Name *</label>
-        <div class="col-sm-10">
+        <label for="firstName" class="control-label" popover-trigger="mouseenter" uib-popover="First name">First Name *</label>
           <input type="text" class="form-control" id="firstName" name="firstName" placeholder="First name (30 characters max)" required ng-maxlength="30" ng-model="$ctrl.model.first_name" ng-disabled="_loading">
           <div class="error-messages" ng-messages="newUser.firstName.$error" role="alert" ng-messages-multiple>
             <div ng-messages-include="parts/shared/error-messages.html"></div>
           </div>
-        </div>
       </div>
       <div class="form-group" ng-class="{ 'has-error': newUser.lastName.$invalid && newUser.lastName.$dirty }">
-        <label for="lastName" class="col-sm-2 control-label" popover-trigger="mouseenter" uib-popover="Last name">Last Name *</label>
-        <div class="col-sm-10">
+        <label for="lastName" class="control-label" popover-trigger="mouseenter" uib-popover="Last name">Last Name *</label>
           <input type="text" class="form-control" id="lastName" name="lastName" placeholder="Last Name (30 characters max)" ng-model="$ctrl.model.last_name" required ng-maxlength="30" ng-disabled="_loading">
           <div class="error-messages" ng-messages="newUser.lastName.$error" role="alert" ng-messages-multiple>
             <div ng-messages-include="parts/shared/error-messages.html"></div>
           </div>
-        </div>
       </div>
       <div class="form-group" ng-class="{ 'has-error': newUser.password.$invalid &&
                             newUser.password.$dirty }">
-        <label for="password" popover-append-to-body="{{true}}" class="col-sm-2 control-label" popover-trigger="mouseenter" uib-popover="At least eight symbols">Password *</label>
-        <div class="col-sm-10">
+        <label for="password" popover-append-to-body="{{true}}" class="control-label" popover-trigger="mouseenter" uib-popover="At least eight symbols">Password *</label>
           <input type="password" class="form-control" id="password" name="password" ng-model="$ctrl.model.password" ng-minlength="8" ng-maxlength="15" required ng-disabled="_loading">
           <div class="error-messages" ng-messages="newUser.password.$error" role="alert" ng-messages-multiple>
             <div ng-message="minlength" class="alert-text alert-text--minlength">Password must contain at least 8 characters</div>
             <div ng-message="maxlength" class="alert-text alert-text--maxlength">Password must contain 15 characters max</div>
             <div ng-messages-include="parts/shared/error-messages.html"></div>
           </div>
-        </div>
       </div>
-      <hr>
       <div class="form-group">
-        <div class="text-center" style="margin-bottom: 10px">
+        <div class="text-center text-muted" style="margin-bottom: 10px">
           By clicking on Sign Up you agree with our
           <a href="https://www.revapm.com/tos/" target="_blank">Terms Of Service</a>,
           <a href="https://www.revapm.com/aup/" target="_blank">Acceptable Use Policy</a> and
           <a href="https://www.revapm.com/privacy/" target="_blank">Privacy Policy</a>
         </div>
-        <br>
-        <div class="col-md-8">
-          <div class="pull-right">
+        <div class="form-action center-block">
+          <div class="text-center">
             <a ui-sref="^" class="btn btn-default">
               <i class="glyphicon glyphicon-remove"></i>&nbsp; Cancel
             </a>
@@ -85,5 +73,6 @@
         </div>
       </div>
     </form>
+    </div>
   </div>
 </div>
