--- a/code/dev/parts/domains/domain-caching-rule/domain-caching-rule.tpl.html
+++ b/code/dev/parts/domains/domain-caching-rule/domain-caching-rule.tpl.html
@@ -1,6 +1,6 @@
 <div class="domain-caching-rule form" ng-form="editForm">
-  <div class="form-group">
-    <div class="col-md-offset-3  col-md-9" ng-class="{'has-error': editForm.url_value.$invalid && editForm.url_value.$dirty}">
+  <div class="form-group" ng-class="{'has-error': editForm.url_value.$invalid && editForm.url_value.$dirty}">
+    <div class="col-md-offset-3  col-md-9">
       <label class="radio-inline">
         <input type="radio" ng-model="$ctrl.rule.url.is_wildcard" ng-value="false">Regular Expression
       </label>
@@ -8,9 +8,9 @@
         <input type="radio" ng-model="$ctrl.rule.url.is_wildcard" ng-value="true">Wildcard Pattern
       </label>
     </div>
-    <label class="col-md-3 control-label">URL</label>
+    <label class="col-md-3 control-label">URL *</label>
     <div class="col-md-9">
-      <input type="text" validate-caching-rule-url name="url_value" class="form-control" ng-model="$ctrl.rule.url.value" ng-required>
+      <input type="text" validate-caching-rule-url name="url_value" class="form-control" ng-model="$ctrl.rule.url.value" required>
       <div class="error-messages" ng-messages="editForm.url_value.$error" role="alert" ng-messages-multiple>
         <div ng-messages-include="parts/shared/error-messages.html"></div>
       </div>
