--- a/code/dev/parts/users/edit.html
+++ b/code/dev/parts/users/edit.html
@@ -59,25 +59,30 @@
           <div class="form-group" ng-class="{'has-error': editForm.accountId.$invalid && editForm.accountId.$dirty}" ng-if="auth.isReseller() || auth.isRevadmin()">
             <label for="company" popover-append-to-body="{{true}}" class="col-sm-2 control-label" popover-trigger="mouseenter" uib-popover="Select here accounts the user should be associated with">Account *</label>
             <div class="col-sm-10">
+             <div class="row col-sm-7">
               <!-- For "admin" and "user" select only one account-->
-              <span ng-show="!_loading && companies.length==0" class="loader--waite-company" ><i class="glyphicon glyphicon-refresh spin"></i> Please wait...</span>
-              <ui-select ng-if="!_loading && companies.length>0 && model.role !='reseller' &&!!model.companyId" ng-animate-disabled theme="select2" ng-disabled="_loading" ng-model="model.companyId[0]" id="company" name="accountId" on-select="onOneAccountSelect($model)">
-                <ui-select-match placeholder="Select Account">{{$select.selected.companyName}}</ui-select-match>
-                <ui-select-choices repeat="item.id as  item in companies | filter: {companyName: $select.search}">
-                  <div ng-bind-html="item.companyName|highlight: $select.search"></div>
-                </ui-select-choices>
-              </ui-select>
-              <!-- For "reseller" multiple select accounts-->
-              <ui-select ng-if="!_loading && companies.length>0 && model.role=='reseller'" multiple ng-animate-disabled theme="bootstrap" class="form-control" ng-disabled="_loading" ng-model="model.companyId" id="company" name="accountId" on-select="onAccountSelect($model)">
-                <ui-select-match placeholder="Add account...">{{$item.companyName}}</ui-select-match>
-                <ui-select-choices repeat="item.id as  item in companies | filter: {companyName: $select.search}">
-                  <div ng-bind-html="item.companyName|highlight: $select.search"></div>
-                </ui-select-choices>
-              </ui-select>
-              <a class="btn btn-sm btn-primary btn--manage-account" ui-sref="index.accountSettings.companies">Manage Accounts</a>
-              <div class="error-messages" ng-messages="editForm.accountId.$error" role="alert" ng-messages-multiple>
-                <div ng-messages-include="parts/shared/error-messages.html"></div>
+                <span ng-show="!_loading && companies.length==0" class="loader--waite-company" ><i class="glyphicon glyphicon-refresh spin"></i> Please wait...</span>
+                <ui-select ng-if="!_loading && companies.length>0 && model.role !='reseller' &&!!model.companyId" ng-animate-disabled theme="select2" ng-disabled="_loading" ng-model="model.companyId[0]" id="company" name="accountId" on-select="onOneAccountSelect($model)">
+                  <ui-select-match placeholder="Select Account">{{$select.selected.companyName}}</ui-select-match>
+                  <ui-select-choices repeat="item.id as  item in companies | filter: {companyName: $select.search}">
+                    <div ng-bind-html="item.companyName|highlight: $select.search"></div>
+                  </ui-select-choices>
+                </ui-select>
+                <!-- For "reseller" multiple select accounts-->
+                <ui-select ng-if="!_loading && companies.length>0 && model.role=='reseller'" multiple ng-animate-disabled theme="bootstrap" class="form-control" ng-disabled="_loading" ng-model="model.companyId" id="company" name="accountId" on-select="onAccountSelect($model)">
+                  <ui-select-match placeholder="Add account...">{{$item.companyName}}</ui-select-match>
+                  <ui-select-choices repeat="item.id as  item in companies | filter: {companyName: $select.search}">
+                    <div ng-bind-html="item.companyName|highlight: $select.search"></div>
+                  </ui-select-choices>
+                </ui-select>
+                <div class="error-messages" ng-messages="editForm.accountId.$error" role="alert" ng-messages-multiple>
+                  <div ng-messages-include="parts/shared/error-messages.html"></div>
+                </div>
+                </div>
+              <div class="form-group col-sm-4">
+                <a ui-sref="index.accountSettings.companies" class="btn btn-sm btn-primary pull-left" uib-tooltip="Manage Accounts" ng-disabled="_loading"><i class="fa fa-list-alt"></i> Manage Accounts</a>
               </div>
+
             </div>
           </div>
           <div class="form-group" ng-class="{'has-error': editForm.domain.$invalid && editForm.domain.$dirty}">
